# peinfo

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: characteristics.c  characteristics.h  data_directories.c  data_directories.h  file_header.c  file_header.h  import_table.c  import_table.h  main.c  optional_header.c  optional_header.h  section_table.c  section_table.h  utils.c  utils.h
